# sysadmin-agents

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
app/: audit.py  config.py  logging.py  main.py
app/agents/: base.py  director.py  loader.py  messages.py  registry.py  sysadmin.py
app/agents/defs/: backupadmin.md  dbadmin.md  deployadmin.md  dockeradmin.md  hostadmin.md  observer.md  remnawave.md  (+3 more)
app/bot/: bot.py  filters.py  gateway.py  handlers.py  keyboards.py  render.py  reports.py
app/learning/: detector.py  lint.py  review.py
app/llm/: client.py
app/memory/: facts.py  history.py  journal.py
app/monitoring/: checks.py  loop.py  state.py  triage.py
app/skills/: loader.py  shellsafe.py
app/tools/: base.py  docker.py
tests/: conftest.py  test_agent_base.py  test_agent_loader.py  test_agent_memory_wiring.py  test_audit.py  test_backup_tools.py  test_bot_filters.py  test_bot_gateway.py  test_bot_handlers.py  test_bot_render.py  test_config.py  test_deploy_tools.py  test_detector.py  test_dialog_history.py  test_director.py  test_director_spawn_memory.py  test_facts.py  test_host_query.py  test_lint.py  test_llm_client.py  test_messages.py  test_monitoring.py  test_observe_query.py  test_registry.py  test_reload.py  test_remnawave_tools.py  test_render_answer.py  test_reports.py  test_review.py  test_sec_query.py  test_shellsafe.py  test_skill_loader.py  test_skill_memory.py  test_sub_parse.py  test_sysadmin.py  test_task_journal.py  test_tls_query.py  test_tools_base.py  test_tools_docker.py
(+37 files in other folders)
