[project]
name = "sysadmin-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4",
    "openai>=1.12",
    "aiodocker>=0.21",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
